--- a/chatbot.html
+++ b/chatbot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>探究的な学び相談Bot</title>
+    <title>探究的な学び相談Bot - 松ノ木小</title>
     <style>
         * {
             margin: 0;
@@ -212,7 +212,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>探究的な学び相談Bot</h1>
+            <h1>探究的な学び相談Bot - 松ノ木小</h1>
             <p>新しい学びのスタイルについて、お気軽にご質問ください</p>
         </div>
 
@@ -270,7 +270,7 @@
     <script>
         // Google Gemini API設定
         // APIキーは https://makersuite.google.com/app/apikey で取得
-        const GEMINI_API_KEY = 'AIzaSyAocqLkMQah62nLQ7Z_EO_ThVr3FTgw0OE'; // ここにAPIキーを入力
+        const GEMINI_API_KEY = 'YOUR_API_KEY_HERE'; // ここにAPIキーを入力
         const GEMINI_API_URL = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent';
         
         // AI使用フラグ（true: Gemini API使用, false: ルールベース）
@@ -452,7 +452,7 @@
         
         // APIキー設定確認とUI表示
         window.onload = function() {
-            if (GEMINI_API_KEY === 'YOUR_API_KEY_HERE') {
+            if (GEMINI_API_KEY === 'AIzaSyAocqLkMQah62nLQ7Z_EO_ThVr3FTgw0OE') {
                 addMessage('ℹ️ 現在はルールベースモードで動作しています。Gemini APIキーを設定するとAI応答が有効になります。', 'bot');
             } else {
                 addMessage('🤖 AI応答モードで動作中です。より自然な対話をお楽しみください！', 'bot');
