--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>探究的な学びChatBot - デモンストレーション</title>
+    <title>探究的な学びChatBot - 松ノ木小学校 デモンストレーション</title>
     <style>
         * {
             margin: 0;
@@ -165,7 +165,7 @@
 </head>
 <body>
     <div class="hero">
-        <h1>探究的な学びChatBot</h1>
+        <h1>探究的な学びChatBot - 松ノ木小</h1>
         <p>新しい学びのスタイルを理解し、実践するための対話型支援ツール</p>
         <a href="./chatbot.html" class="demo-button">デモを試す</a>
     </div>
@@ -179,7 +179,7 @@
         <div class="features">
             <div class="feature-card">
                 <h3>🎯 目的</h3>
-                <p>探究的な学びや複線型授業について、多くの先生方に理解していただき、実践のきっかけを提供します。</p>
+                <p>松ノ木小学校で実践している探究的な学びや複線型授業について、多くの先生方に理解していただき、実践のきっかけを提供します。</p>
             </div>
             
             <div class="feature-card">
@@ -235,7 +235,7 @@
             <p>ChatBotの改善のため、ご意見・ご要望をお聞かせください。</p>
             <p>実践事例の共有や、導入のご相談も承っております。</p>
             <p style="margin-top: 20px;">
-                <a href="mailto:your-email@example.com" class="demo-button">お問い合わせ</a>
+                <a href="mailto:kasah@kasah.jp" class="demo-button">お問い合わせ</a>
             </p>
         </div>
     </div>
