--- a/chatbot.html
+++ b/chatbot.html
@@ -276,7 +276,7 @@
         // Google Sheets API設定
         const SHEETS_API_KEY = 'AIzaSyB7VghMOI8SejM0-n36xX_D8aidmcTzvJI'; // Google Sheets APIキーを入力
         const SPREADSHEET_ID = '1CGPg9S-x4hrzGjOa6CzyZ_XkGWFGyVGLD4LzEgQnRrY'; // スプレッドシートIDを入力
-        const SHEET_NAME = 'シート1'; // シート名（通常は'Sheet1'）
+        const SHEET_NAME = 'sheet 1'; // シート名（通常は'Sheet1'）
         const SHEETS_API_URL = `https://sheets.googleapis.com/v4/spreadsheets/${SPREADSHEET_ID}/values/${SHEET_NAME}?key=${SHEETS_API_KEY}`;
         
         // AI使用フラグ（true: Gemini API使用, false: ルールベース）
